--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 <body>
     <main>
         <div class="container">
-            <div class="box"></div>
+            <div class="box">
+                <div class="content">
+                    <img src="img/1.webp" alt="">
+                    <div id="hearts">&hearts;</div>
+                    <div class="sconto">
+                        <span>-50%</span> <span>Sostenibilità</span>
+                    </div>
+                </div>
+                <ul>
+                    <li class="marca">Levi's</li>
+                    <li>
+                        <h3>RELAXED FIT TEE UNISEX</h3>
+                    </li>
+                    <li class="prezzo">14,99 € <span>29,99 €</span></li>
+                </ul>
+            </div>
             <div class="box">a</div>
             <div class="box">a</div>
             <div class="box">a</div>
