feat: main completo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="">
     <main>
         <div class="container">
+            <!-- Primo Box  -->
             <div class="box">
                 <div class="content">
-                    <img src="img/1.webp" alt="">
+                    <img src="img/1.webp" alt="Immagini Boolando">
                     <div id="hearts">&hearts;</div>
                     <div class="sconto">
-                        <span>-50%</span> <span>Sostenibilità</span>
+                        <span>-50%</span> <span class="sostenibilità">Sostenibilità</span>
                     </div>
                 </div>
                 <ul>
@@ -27,11 +28,95 @@
                     <li class="prezzo">14,99 € <span>29,99 €</span></li>
                 </ul>
             </div>
-            <div class="box">a</div>
-            <div class="box">a</div>
-            <div class="box">a</div>
-            <div class="box">a</div>
-            <div class="box">a</div>
+            <!-- Primo Box  -->
+            <!-- Secondo Box  -->
+            <div class="box">
+                <div class="content">
+                    <img src="img/2.webp" alt="Immagini Boolando">
+                    <div id="hearts">&hearts;</div>
+                    <div class="sconto">
+                        <span>-30%</span>
+                    </div>
+                </div>
+                <ul>
+                    <li class="marca">Guess</li>
+                    <li>
+                        <h3>ROSES TEE</h3>
+                    </li>
+                    <li class="prezzo">20,99 € <span>29,99 €</span></li>
+                </ul>
+            </div>
+            <!-- Secondo Box  -->
+            <!-- Terzo Box  -->
+            <div class="box">
+                <div class="content">
+                    <img src="img/3.webp" alt="Immagini Boolando">
+                    <div id="hearts">&hearts;</div>
+                    <div class="sconto">
+                        <span>-30%</span>
+                    </div>
+                </div>
+                <ul>
+                    <li class="marca">Come zucchero filato</li>
+                    <li>
+                        <h3>VOGLIA DI COLORI PASTELLO</h3>
+                    </li>
+                    <li class="prezzo">194,99 € <span>184,99 €</span></li>
+                </ul>
+            </div>
+            <!-- Terzo Box  -->
+            <!-- Primo Box Inferiore  -->
+            <div class="box">
+                <div class="content">
+                    <img src="img/4.webp" alt="Immagini Boolando">
+                    <div id="hearts">&hearts;</div>
+                    <div class="sconto">
+                        <span>-50%</span> <span class="sostenibilità">Sostenibilità</span>
+                    </div>
+                </div>
+                <ul>
+                    <li class="marca">Levi's</li>
+                    <li>
+                        <h3>TEE UNISEX</h3>
+                    </li>
+                    <li class="prezzo">14,99 € <span>29,99 €</span></li>
+                </ul>
+            </div>
+            <!-- Primo Box Inferiore  -->
+            <!-- Secondo Box Inferiore   -->
+            <div class="box">
+                <div class="content">
+                    <img src="img/5.webp" alt="Immagini Boolando">
+                    <div id="hearts">&hearts;</div>
+                </div>
+                <ul>
+                    <li class="marca">Maya Deluxe</li>
+                    <li>
+                        <h3>STRIPE BODICE</h3>
+                    </li>
+                    <li class="prezzo">99,99 €</li>
+                </ul>
+            </div>
+            <!-- Secondo Box Inferiore   -->
+            <!-- Terzo Box Inferiore   -->
+            <div class="box">
+                <div class="content">
+                    <img src="img/6.webp" alt="Immagini Boolando">
+                    <div id="hearts">&hearts;</div>
+                    <div class="sconto">
+                        <span class="sostenibilità">Sostenibilità</span>
+                    </div>
+                </div>
+                <ul>
+                    <li class="marca">Esprit</li>
+                    <li>
+                        <h3>MAGLIONE-BLACK</h3>
+                    </li>
+                    <li class="prezzo"> 29,99 €</li>
+                </ul>
+            </div>
+            <!-- Terzo Box Inferiore   -->
+
         </div>
     </main>
 </body>
