feat: hover & header

--- a/index.html
+++ b/index.html
@@ -5,17 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font Awesome -->
+    <!-- MY CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- MY CSS -->
 </head>
 
 <body class="">
+    <header>
+        <div class="nav">
+            <div>
+                <ul class="menu">
+                    <li>Donna</li>
+                    <li>Uomo</li>
+                    <li>Bambini</li>
+                </ul>
+            </div>
+            <div><img src="img/boolean-logo.png" alt="Boolean">
+            </div>
+            <div>
+                <ul class="menu">
+                    <li><i class="fa-regular fa-user"></i> </li>
+                    <li><i class="fa-regular fa-heart"></i></li>
+                    <li><i class="fa-solid fa-bag-shopping"></i></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
     <main>
         <div class="container">
             <!-- Primo Box  -->
             <div class="box">
                 <div class="content">
                     <img src="img/1.webp" alt="Immagini Boolando">
-                    <div id="hearts">&hearts;</div>
+                    <img src="img/1b.webp" alt="immagini Boolando" class="img-second">
+                    <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-50%</span> <span class="sostenibilità">Sostenibilità</span>
                     </div>
@@ -33,7 +63,8 @@
             <div class="box">
                 <div class="content">
                     <img src="img/2.webp" alt="Immagini Boolando">
-                    <div id="hearts">&hearts;</div>
+                    <img src="img/2b.webp" alt="immagini Boolando" class="img-second">
+                    <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-30%</span>
                     </div>
@@ -51,7 +82,8 @@
             <div class="box">
                 <div class="content">
                     <img src="img/3.webp" alt="Immagini Boolando">
-                    <div id="hearts">&hearts;</div>
+                    <img src="img/3b.webp" alt="immagini Boolando" class="img-second">
+                    <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-30%</span>
                     </div>
@@ -69,7 +101,8 @@
             <div class="box">
                 <div class="content">
                     <img src="img/4.webp" alt="Immagini Boolando">
-                    <div id="hearts">&hearts;</div>
+                    <img src="img/4b.webp" alt="immagini Boolando" class="img-second">
+                    <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-50%</span> <span class="sostenibilità">Sostenibilità</span>
                     </div>
@@ -87,7 +120,8 @@
             <div class="box">
                 <div class="content">
                     <img src="img/5.webp" alt="Immagini Boolando">
-                    <div id="hearts">&hearts;</div>
+                    <img src="img/5b.webp" alt="immagini Boolando" class="img-second">
+                    <div class="hearts">&hearts;</div>
                 </div>
                 <ul>
                     <li class="marca">Maya Deluxe</li>
@@ -102,7 +136,8 @@
             <div class="box">
                 <div class="content">
                     <img src="img/6.webp" alt="Immagini Boolando">
-                    <div id="hearts">&hearts;</div>
+                    <img src="img/6b.webp" alt="immagini Boolando" class="img-second">
+                    <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span class="sostenibilità">Sostenibilità</span>
                     </div>
