--- a/index.html
+++ b/index.html
@@ -151,9 +151,34 @@
                 </ul>
             </div>
             <!-- Terzo Box Inferiore   -->
-
         </div>
     </main>
+    <footer>
+        <div class="nav-footer">
+
+            <div>
+                <h3>Boolando s.r.l</h3>
+                <ul class="info">
+                    <li>Informazionu legali </li>
+                    <li>Normativa sulla privacy </li>
+                    <li>Diritto di recesso </li>
+                </ul>
+                </li>
+            </div>
+
+            <div>
+                <h4>Trovaci anche su</h4>
+                <ul class="info">
+                    <li><i class="fa-brands fa-square-twitter"></i> </li>
+                    <li><i class="fa-brands fa-square-facebook"></i></li>
+                    <li><i class="fa-brands fa-square-instagram"></i> </li>
+                    <li><i class="fa-brands fa-square-pinterest"></i></li>
+                    <li><i class="fa-brands fa-square-youtube"></i></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
