feat: commenti Html fix: tolta classe Debug

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <!-- MY CSS -->
 </head>
 
-<body class="">
+<body>
     <header>
+        <!-- header parte nav bar -->
         <div class="nav">
+            <!-- Link col 1 -->
             <div>
                 <ul class="menu">
                     <li>Donna</li>
@@ -26,8 +28,13 @@
                     <li>Bambini</li>
                 </ul>
             </div>
-            <div><img src="img/boolean-logo.png" alt="Boolean">
+            <!-- Link col 1 -->
+            <!-- col 2 logo Booleando -->
+            <div>
+                <img src="img/boolean-logo.png" alt="Boolean">
             </div>
+            <!-- col 2 logo Booleando -->
+            <!-- Link col 3 -->
             <div>
                 <ul class="menu">
                     <li><i class="fa-regular fa-user"></i> </li>
@@ -35,21 +42,30 @@
                     <li><i class="fa-solid fa-bag-shopping"></i></li>
                 </ul>
             </div>
+            <!-- Link col 3 -->
         </div>
+        <!-- header parte nav bar -->
     </header>
 
+
     <main>
+        <!-- container col -->
         <div class="container">
             <!-- Primo Box  -->
             <div class="box">
+                <!-- contenitore img e parti di position -->
                 <div class="content">
                     <img src="img/1.webp" alt="Immagini Boolando">
                     <img src="img/1b.webp" alt="immagini Boolando" class="img-second">
+                    <!-- position -->
                     <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-50%</span> <span class="sostenibilità">Sostenibilità</span>
                     </div>
+                    <!-- position -->
                 </div>
+                <!-- contenitore img e parti di position -->
+                <!-- info prodotto -->
                 <ul>
                     <li class="marca">Levi's</li>
                     <li>
@@ -57,18 +73,25 @@
                     </li>
                     <li class="prezzo">14,99 € <span>29,99 €</span></li>
                 </ul>
+                <!-- info prodotto -->
             </div>
             <!-- Primo Box  -->
+
             <!-- Secondo Box  -->
             <div class="box">
+                <!-- contenitore img e parti di position -->
                 <div class="content">
                     <img src="img/2.webp" alt="Immagini Boolando">
                     <img src="img/2b.webp" alt="immagini Boolando" class="img-second">
+                    <!-- position -->
                     <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-30%</span>
                     </div>
+                    <!-- position -->
                 </div>
+                <!-- contenitore img e parti di position -->
+                <!-- info prodotto -->
                 <ul>
                     <li class="marca">Guess</li>
                     <li>
@@ -76,18 +99,25 @@
                     </li>
                     <li class="prezzo">20,99 € <span>29,99 €</span></li>
                 </ul>
+                <!-- info prodotto -->
             </div>
             <!-- Secondo Box  -->
+
             <!-- Terzo Box  -->
             <div class="box">
+                <!-- contenitore img e parti di position -->
                 <div class="content">
                     <img src="img/3.webp" alt="Immagini Boolando">
                     <img src="img/3b.webp" alt="immagini Boolando" class="img-second">
+                    <!-- position -->
                     <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-30%</span>
                     </div>
+                    <!-- position -->
                 </div>
+                <!-- contenitore img e parti di position -->
+                <!-- info prodotto -->
                 <ul>
                     <li class="marca">Come zucchero filato</li>
                     <li>
@@ -95,18 +125,25 @@
                     </li>
                     <li class="prezzo">194,99 € <span>184,99 €</span></li>
                 </ul>
+                <!-- info prodotto -->
             </div>
             <!-- Terzo Box  -->
+
             <!-- Primo Box Inferiore  -->
             <div class="box">
+                <!-- contenitore img e parti di position -->
                 <div class="content">
                     <img src="img/4.webp" alt="Immagini Boolando">
                     <img src="img/4b.webp" alt="immagini Boolando" class="img-second">
+                    <!-- position -->
                     <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span>-50%</span> <span class="sostenibilità">Sostenibilità</span>
                     </div>
+                    <!-- position -->
                 </div>
+                <!-- contenitore img e parti di position -->
+                <!-- info prodotto -->
                 <ul>
                     <li class="marca">Levi's</li>
                     <li>
@@ -114,15 +151,22 @@
                     </li>
                     <li class="prezzo">14,99 € <span>29,99 €</span></li>
                 </ul>
+                <!-- info prodotto -->
             </div>
             <!-- Primo Box Inferiore  -->
+
             <!-- Secondo Box Inferiore   -->
             <div class="box">
+                <!-- contenitore img e parti di position -->
                 <div class="content">
                     <img src="img/5.webp" alt="Immagini Boolando">
                     <img src="img/5b.webp" alt="immagini Boolando" class="img-second">
+                    <!-- position -->
                     <div class="hearts">&hearts;</div>
+                    <!-- position -->
                 </div>
+                <!-- contenitore img e parti di position -->
+                <!-- info prodotto -->
                 <ul>
                     <li class="marca">Maya Deluxe</li>
                     <li>
@@ -130,18 +174,25 @@
                     </li>
                     <li class="prezzo">99,99 €</li>
                 </ul>
+                <!-- info prodotto -->
             </div>
             <!-- Secondo Box Inferiore   -->
+
             <!-- Terzo Box Inferiore   -->
             <div class="box">
+                <!-- contenitore img e parti di position -->
                 <div class="content">
                     <img src="img/6.webp" alt="Immagini Boolando">
                     <img src="img/6b.webp" alt="immagini Boolando" class="img-second">
+                    <!-- position -->
                     <div class="hearts">&hearts;</div>
                     <div class="sconto">
                         <span class="sostenibilità">Sostenibilità</span>
                     </div>
+                    <!-- position -->
                 </div>
+                <!-- contenitore img e parti di position -->
+                <!-- info prodotto -->
                 <ul>
                     <li class="marca">Esprit</li>
                     <li>
@@ -149,13 +200,16 @@
                     </li>
                     <li class="prezzo"> 29,99 €</li>
                 </ul>
+                <!-- info prodotto -->
             </div>
             <!-- Terzo Box Inferiore   -->
         </div>
     </main>
-    <footer>
-        <div class="nav-footer">
 
+    <footer>
+        <!-- container nav footer -->
+        <div class="nav-footer">
+            <!-- footer col 1 -->
             <div>
                 <h3>Boolando s.r.l</h3>
                 <ul class="info">
@@ -163,21 +217,25 @@
                     <li>Normativa sulla privacy </li>
                     <li>Diritto di recesso </li>
                 </ul>
-                </li>
             </div>
+            <!-- footer col 1 -->
 
+            <!-- footer col 2 -->
             <div>
                 <h4>Trovaci anche su</h4>
                 <ul class="info">
+                    <!-- social -->
                     <li><i class="fa-brands fa-square-twitter"></i> </li>
                     <li><i class="fa-brands fa-square-facebook"></i></li>
                     <li><i class="fa-brands fa-square-instagram"></i> </li>
                     <li><i class="fa-brands fa-square-pinterest"></i></li>
                     <li><i class="fa-brands fa-square-youtube"></i></li>
+                    <!-- social -->
                 </ul>
             </div>
-
+            <!-- footer col 2 -->
         </div>
+        <!-- container nav footer -->
     </footer>
 </body>
 
